--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7ff4482c6290&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f95dcd4d9d0&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7ff44800f050&gt;,
- &lt;matplotlib.lines.Line2D at 0x7ff44800f250&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f95dca6dc10&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f95dca6de10&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7ff448887910&gt;,
- &lt;matplotlib.lines.Line2D at 0x7ff448887b10&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f95dcfd7590&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f95dcfd7790&gt;]</pre>
 </div>
 
 </div>
