--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f34d6233390&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f86048983d0&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f34d6279c90&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f34d6279e90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f86035fed10&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f86035fef10&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f34d67e3550&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f34d67e3750&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f8603e86550&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f8603e86750&gt;]</pre>
 </div>
 
 </div>
