--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fb65bc47490&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f79a53c3610&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fb65bcb1c90&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fb65bcb1e90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f79a50d6b90&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f79a50d6d90&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fb65c21b590&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fb65c21b790&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f79a5640550&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f79a5640750&gt;]</pre>
 </div>
 
 </div>
