--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fb703bd1ad0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f20f6ae0410&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fb7035c8c50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fb7035c8e50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f20f6b44ed0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f20f6b4f110&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fb703e61590&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fb703e61790&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f20f70af810&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f20f70afa10&gt;]</pre>
 </div>
 
 </div>
