--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fae1c77dbd0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fdb049b6b50&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fae1c4afb10&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fae1c7b6dd0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fdb046ded10&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fdb046def50&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fae1ca3ec90&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fae1ca0a6d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fdb04c474d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fdb04c47710&gt;]</pre>
 </div>
 
 </div>
