--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f5a2b73e7d0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f90ea4ff490&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f5a2b778d50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f5a2b778f50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f90e9eefd90&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f90e9eeff90&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f5a2bce2650&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f5a2bce2850&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f90ea777790&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f90ea777990&gt;]</pre>
 </div>
 
 </div>
