--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f88bbeab190&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fb1b8153ad0&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f88bb8d4c50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f88bb8d4e90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fb1b7b48e90&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fb1b7b360d0&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f88bc163590&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f88bc1637d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fb1b83d2750&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fb1b83d2950&gt;]</pre>
 </div>
 
 </div>
