--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f96d92f0290&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fc7b6f60a90&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f96d8ffcb90&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f96d8ffcdd0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fc7b6c7fd10&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fc7b6c7ff50&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f96d9895510&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f96d9895750&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fc7b71e7650&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fc7b71e7890&gt;]</pre>
 </div>
 
 </div>
