--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f2ebbb3a2d0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fbc1a8f7290&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f2ebb527cd0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f2ebb527ed0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fbc1a617bd0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fbc1a617dd0&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f2ebbdb85d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f2ebbdb87d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fbc1aea5550&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fbc1aea5750&gt;]</pre>
 </div>
 
 </div>
