--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fbc1a8f7290&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fa9426b6350&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fbc1a617bd0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fbc1a617dd0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fa94271ad10&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fa94271af10&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fbc1aea5550&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fbc1aea5750&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fa942c8a610&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fa942c8a810&gt;]</pre>
 </div>
 
 </div>
