--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f3da7b5bcd0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f4a6cfc7b50&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f3da755ce50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f3da7549090&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f4a6ccb8b90&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f4a6ccb8d90&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f3da7de57d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f3da7de59d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f4a6d2434d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f4a6d2436d0&gt;]</pre>
 </div>
 
 </div>
