--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f3a54ba92d0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f2dae377910&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f3a548dad10&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f3a548daf10&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f2dadd66d10&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f2dadd66f10&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f3a55161650&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f3a55161850&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f2dae5f6650&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f2dae5f6850&gt;]</pre>
 </div>
 
 </div>
