--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f521e839850&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f1bd6a1c810&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f521e232ed0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f521e242110&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f1bd6427fd0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f1bd640f210&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f521eaba790&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f521eaba990&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f1bd6cac850&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f1bd6caca50&gt;]</pre>
 </div>
 
 </div>
