--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f952ee9a410&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f4a99cc2ad0&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f952ebc1f50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f952ebbe190&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f4a999dcc50&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f4a999dce50&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f952f12c850&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f952f12ca50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f4a99f46590&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f4a99f46790&gt;]</pre>
 </div>
 
 </div>
