--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f7f4b586850&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fc649fa6310&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f7f4af76a50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f7f4af76c90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fc649cbfbd0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fc649cbfdd0&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f7f4b80c3d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f7f4b80c610&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fc64a229550&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fc64a229750&gt;]</pre>
 </div>
 
 </div>
