--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7ff3e926a390&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f3753457bd0&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7ff3e92b3d10&gt;,
- &lt;matplotlib.lines.Line2D at 0x7ff3e92b3f10&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f3753177bd0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f3753177dd0&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7ff3e94f85d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7ff3e94f87d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f37536e14d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f37536e16d0&gt;]</pre>
 </div>
 
 </div>
